[package]
name = "diff-tool"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
readme = "readme.md"
description = "A tool giving a side by side git diff view"
homepage = "https://github.com/Ddraigan/diff-tool"
repository = "https://github.com/Ddraigan/diff-tool"
keywords = ["tui", "diff", "cli", "git"]
categories = ["command-line-utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
config = "0.14.0"
crossterm = { version = "0.27.0" }
env_logger = "0.11.0"
log = "0.4.20"
ratatui = "0.26.0"
serde = { version = "1.0.197", features = ["derive"] }
