[package]
name = "diff-tool"
build = "build.rs"
version = "0.2.1"
authors = ["Ddraigan"]
edition = "2021"
license = "Apache-2.0"
readme = "readme.md"
description = "A tool giving a side by side git diff view"
homepage = "https://github.com/Ddraigan/diff-tool"
repository = "https://github.com/Ddraigan/diff-tool"
keywords = ["tui", "diff", "cli", "git"]
categories = ["command-line-utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "cargo", "env", "string" ] }
config = "0.14.0"
crossterm = { version = "0.27.0" }
directories = "5.0.1"
lazy_static = "1.4.0"
ratatui = "0.26.0"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
